feat: adapt to the new API shape
